chore: accessibility audit - as per best practices

--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -73,7 +73,9 @@
                 <!-- HEADER LOGO -->
                 <div class="flex items-center flex-1 w-20 basis-['250px']">
                     <a href="{% url 'home-page' %}" class="w-20">
-                        <img src="/static/img/flyux-logo.png" alt="" height="" />
+                        <img src="/static/img/flyux-logo.png"
+                             alt="'flyUX' logo: A minimalist logo consisting of 'flyUX' text, using a modern sans-serif font, with a small illustrated airplane sweeping under the text to convey travel-inspired design."
+                             height="" />
                     </a>
                 </div>
                 <!-- NAV ITEMS -->
@@ -166,13 +168,15 @@
                 <div class="flex items-center justify-between gap-6 pl-4">
                     <a href="https://carlmurray.design/" class="text-white">
                         <img src="{% static 'img/footer/footer-portfolio-icon.svg' %}"
-                             alt="Portfolio icon" />
+                             alt="Creator's personal logo: The letters 'C' and 'M' in a serif font encircled with a white background. Links to creator's portfolio site." />
                     </a>
                     <a href="https://github.com/CarlMurray/flyUX-pp4" class="text-white">
-                        <img src="{% static 'img/footer/footer-github-icon.svg' %}" alt="" />
+                        <img src="{% static 'img/footer/footer-github-icon.svg' %}"
+                             alt="GitHub logo: The recognizable Octocat logo, representing GitHub, a code hosting platform. Links to creator's GitHub profile." />
                     </a>
                     <a href="https://www.linkedin.com/in/carljmurray/" class="text-white">
-                        <img src="{% static 'img/footer/footer-linkedin-icon.svg' %}" alt="" />
+                        <img src="{% static 'img/footer/footer-linkedin-icon.svg' %}"
+                             alt="LinkedIn logo: The letters 'I' and 'N' encircled with w white background. Links to creator's LinkedIn profile." />
                     </a>
                 </div>
             </div>
