--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -22,6 +22,7 @@
                                    required
                                    placeholder="Email"
                                    id="id_email"
+                                   aria-label="Email address"
                                    class="h-12 px-4 rounded-full  border-gray-300 bg-white  focus:drop-shadow-md border-[1px] focus:border-primary focus:outline-0 focus:ring-0">
                         </div>
                         <!-- PASSWORD FIELD -->
@@ -33,6 +34,7 @@
                                    required
                                    placeholder="Password"
                                    id="id_password"
+                                   aria-label="Password"
                                    class="h-12 px-4 rounded-full  border-gray-300 bg-white  focus:drop-shadow-md border-[1px] focus:border-primary focus:outline-0 focus:ring-0">
                         </div>
                         {% if request.GET.next %}
@@ -40,6 +42,7 @@
                             <input type="hidden" name="next" value="{{ request.GET.urlencode }}">
                         {% endif %}
                         <button type="submit"
+                                aria-label="Login"
                                 class="flex items-center justify-center h-12 px-6 font-bold text-center text-white rounded-full bg-primary py-auto">
                             Login
                         </button>
