--- a/templates/users/register.html
+++ b/templates/users/register.html
@@ -22,6 +22,7 @@
                                    required
                                    id="id_email"
                                    placeholder="Email"
+                                   aria-label="Email"
                                    class="h-12 px-4 rounded-full  border-gray-300 bg-white  focus:drop-shadow-md border-[1px] focus:border-primary focus:outline-0 focus:ring-0">
                         </div>
                         <!-- FIRST NAME FIELD -->
@@ -32,6 +33,7 @@
                                    required=""
                                    id="id_first_name"
                                    placeholder="First name"
+                                   aria-label="First name"
                                    class="h-12 px-4 rounded-full  border-gray-300 bg-white  focus:drop-shadow-md border-[1px] focus:border-primary focus:outline-0 focus:ring-0">
                         </div>
                         <!-- LAST NAME FIELD -->
@@ -42,6 +44,7 @@
                                    required=""
                                    id="id_last_name"
                                    placeholder="Last name"
+                                   aria-label="Last name"
                                    class="h-12 px-4 rounded-full  border-gray-300 bg-white  focus:drop-shadow-md border-[1px] focus:border-primary focus:outline-0 focus:ring-0">
                         </div>
                         <!-- PASSWORD -->
@@ -52,6 +55,7 @@
                                    required=""
                                    id="id_password1"
                                    placeholder="Password"
+                                   aria-label="Password"
                                    class="h-12 px-4 rounded-full  border-gray-300 bg-white  focus:drop-shadow-md border-[1px] focus:border-primary focus:outline-0 focus:ring-0">
                         </div>
                         <!-- PASSWORD CONFIRM -->
@@ -62,6 +66,7 @@
                                    required=""
                                    id="id_password2"
                                    placeholder="Confirm password"
+                                   aria-label="Confirm password"
                                    class="h-12 px-4 rounded-full  border-gray-300 bg-white  focus:drop-shadow-md border-[1px] focus:border-primary focus:outline-0 focus:ring-0">
                         </div>
                         <div class="p-4">
@@ -75,6 +80,7 @@
                             </span>
                         </div>
                         <button type="submit"
+                                aria-label="Create account"
                                 class="flex items-center justify-center h-12 px-6 font-bold text-center text-white rounded-full bg-primary py-auto">
                             Create account
                         </button>
