--- a/templates/core/bookings-detail.html
+++ b/templates/core/bookings-detail.html
@@ -53,7 +53,8 @@
             <div class="flex items-center justify-between">
                 <p class="text-lg font-bold text-primary">Passengers</p>
                 <button class="rounded-full py-2 px-4 border-[1px] border-primary"
-                        hx-get="/bookings/detail/edit/{{ booking.id }}">Edit Passengers</button>
+                        hx-get="/bookings/detail/edit/{{ booking.id }}"
+                        aria-label="Edit passengers">Edit Passengers</button>
             </div>
             <ol class="list-decimal max-w-[400px]">
                 {% for passenger in passengers %}
