style: change primary colour for accessibility

--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -38,7 +38,7 @@
           },
           extend: {
             colors: {
-              primary: "#FF5C6B",
+              primary: "#E90464",
               text: "#404040",
             },
           },
