--- a/templates/core/checkout.html
+++ b/templates/core/checkout.html
@@ -34,7 +34,7 @@
                     <input type="text"
                            name=""
                            id="card-name"
-                           class="col-span-2 h-12 px-4 rounded-full  border-gray-300 bg-white  focus:drop-shadow-md border-[1px] focus:border-primary focus:outline-0 focus:ring-0 flex-1"
+                           class="hover:drop-shadow-md transition-all col-span-2 h-12 px-4 rounded-full  border-gray-300 bg-white  focus:drop-shadow-md border-[1px] focus:border-primary focus:outline-0 focus:ring-0 flex-1"
                            placeholder="Name on card"
                            minlength="1"
                            aria-label="Name on card"
@@ -42,7 +42,7 @@
                     <input type="text"
                            name=""
                            id="card-number"
-                           class="col-span-2 h-12 px-4 rounded-full  border-gray-300 bg-white  focus:drop-shadow-md border-[1px] focus:border-primary focus:outline-0 focus:ring-0 flex-1"
+                           class="hover:drop-shadow-md transition-all col-span-2 h-12 px-4 rounded-full  border-gray-300 bg-white  focus:drop-shadow-md border-[1px] focus:border-primary focus:outline-0 focus:ring-0 flex-1"
                            placeholder="Card number"
                            minlength="20"
                            maxlength="20"
@@ -51,7 +51,7 @@
                     <input type="text"
                            name=""
                            id="card-cvc"
-                           class="col-span-1 h-12 px-4 rounded-full  border-gray-300 bg-white  focus:drop-shadow-md border-[1px] focus:border-primary focus:outline-0 focus:ring-0 flex-1"
+                           class="hover:drop-shadow-md transition-all col-span-1 h-12 px-4 rounded-full  border-gray-300 bg-white  focus:drop-shadow-md border-[1px] focus:border-primary focus:outline-0 focus:ring-0 flex-1"
                            placeholder="CVC"
                            minlength="3"
                            maxlength="3"
@@ -60,7 +60,7 @@
                     <input type="text"
                            name=""
                            id="card-expiry"
-                           class="col-span-1 h-12 px-4 rounded-full  border-gray-300 bg-white  focus:drop-shadow-md border-[1px] focus:border-primary focus:outline-0 focus:ring-0 flex-1"
+                           class="hover:drop-shadow-md transition-all col-span-1 h-12 px-4 rounded-full  border-gray-300 bg-white  focus:drop-shadow-md border-[1px] focus:border-primary focus:outline-0 focus:ring-0 flex-1"
                            placeholder="Expiry"
                            minlength="7"
                            maxlength="9"
@@ -70,7 +70,7 @@
                             name=""
                             id=""
                             aria-label="Pay €{{ total_price }}"
-                            class="col-span-2 h-12 px-4 rounded-full  bg-primary text-white text-bold  focus:drop-shadow-md border-[1px] focus:border-primary focus:outline-0 focus:ring-0 flex-1">
+                            class="cursor-pointer hover:scale-[103%] transition-all col-span-2 h-12 px-4 rounded-full  bg-primary text-white text-bold  focus:drop-shadow-md border-[1px] focus:border-primary focus:outline-0 focus:ring-0 flex-1">
                         Pay €{{ total_price }}
                     </button>
                 </form>
