--- a/templates/core/index.html
+++ b/templates/core/index.html
@@ -57,7 +57,7 @@
                                            name="origin"
                                            id="origin"
                                            placeholder="Origin"
-                                           class="z-40 relative w-full h-12 px-4 rounded-full border-gray-300 bg-white  focus:drop-shadow-md border-[1px] focus:outline-0 focus:ring-0 focus:border-primary drop-shadow-sm"
+                                           class="hover:drop-shadow-md transition-all z-40 relative w-full h-12 px-4 rounded-full border-gray-300 bg-white  focus:drop-shadow-md border-[1px] focus:outline-0 focus:ring-0 focus:border-primary drop-shadow-sm"
                                            aria-label="Select Origin"
                                            required>
                                     <div id="airports-list-origin"
@@ -75,7 +75,7 @@
                                            name="destination"
                                            id="destination"
                                            placeholder="Destination"
-                                           class="caret-transparent z-20 relative w-full h-12 px-4 rounded-full border-gray-300 bg-white  focus:drop-shadow-md border-[1px] focus:outline-0 focus:ring-0 focus:border-primary drop-shadow-sm"
+                                           class="hover:drop-shadow-md transition-all caret-transparent z-20 relative w-full h-12 px-4 rounded-full border-gray-300 bg-white  focus:drop-shadow-md border-[1px] focus:outline-0 focus:ring-0 focus:border-primary drop-shadow-sm"
                                            aria-label="Select Destination"
                                            required>
                                     <div id="airports-list-destination"
@@ -92,7 +92,7 @@
                                 <input type="text"
                                        name="outbound_date"
                                        id="flatpickr-date-outbound"
-                                       class="caret-transparent flatpickr flatpickr-input active col-span-2 md:col-span-1 h-12 px-4 rounded-full  border-gray-300 bg-white  focus:drop-shadow-md border-[1px] focus:outline-0 focus:ring-0 focus:border-primary drop-shadow-sm"
+                                       class="hover:drop-shadow-md transition-all caret-transparent flatpickr flatpickr-input active col-span-2 md:col-span-1 h-12 px-4 rounded-full  border-gray-300 bg-white  focus:drop-shadow-md border-[1px] focus:outline-0 focus:ring-0 focus:border-primary drop-shadow-sm"
                                        placeholder="Outbound Date"
                                        data-id="datetime"
                                        aria-label="Outbound date"
@@ -101,7 +101,7 @@
                                 <input type="text"
                                        name="return_date"
                                        id="flatpickr-date-return"
-                                       class="caret-transparent flatpickr flatpickr-input active col-span-2 md:col-span-1 h-12 px-4 rounded-full  border-gray-300 bg-white  focus:drop-shadow-md border-[1px] focus:outline-0 focus:ring-0 focus:border-primary drop-shadow-sm"
+                                       class="hover:drop-shadow-md transition-all caret-transparent flatpickr flatpickr-input active col-span-2 md:col-span-1 h-12 px-4 rounded-full  border-gray-300 bg-white  focus:drop-shadow-md border-[1px] focus:outline-0 focus:ring-0 focus:border-primary drop-shadow-sm"
                                        placeholder="Return Date"
                                        data-id="datetime"
                                        aria-label="Return date"
@@ -113,7 +113,7 @@
         class="col-span-4 sm:col-span-2 md:col-span-1 h-12 px-4 rounded-full  border-gray-300 bg-white  focus:drop-shadow-md border-[1px] focus:outline-0 focus:ring-0 focus:border-primary drop-shadow-sm"> {% endcomment %}
                                 <select name="passengers"
                                         id=""
-                                        class="disabled: text-gray-400 col-span-4 sm:col-span-2 md:col-span-1 h-12 px-4 rounded-full  border-gray-300 bg-white  focus:drop-shadow-md border-[1px] focus:outline-0 focus:ring-0 focus:border-primary drop-shadow-sm"
+                                        class="hover:drop-shadow-md transition-all disabled: text-gray-400 col-span-4 sm:col-span-2 md:col-span-1 h-12 px-4 rounded-full  border-gray-300 bg-white  focus:drop-shadow-md border-[1px] focus:outline-0 focus:ring-0 focus:border-primary drop-shadow-sm"
                                         aria-label="Select number of passengers"
                                         required>
                                     <option value="" selected disabled>Passengers</option>
@@ -130,7 +130,7 @@
                                        value="Search Flights"
                                        name="submit"
                                        id="submit"
-                                       class="flex items-center justify-center h-12 col-span-4 px-6 font-bold text-center text-white rounded-full sm:col-span-2 md:col-span-1 bg-primary py-auto drop-shadow-sm"
+                                       class="flex items-center justify-center h-12 col-span-4 px-6 font-bold text-center text-white rounded-full sm:col-span-2 md:col-span-1 bg-primary py-auto drop-shadow-sm cursor-pointer hover:scale-[103%] transition-all"
                                        aria-label="Search flights">
                             </div>
                         </div>
