style: fix contrast error on edit btn

--- a/templates/core/bookings.html
+++ b/templates/core/bookings.html
@@ -33,7 +33,7 @@
                             </td>
                             <td class="px-1 py-4 sm:px-6">
                                 <a href="{% url 'bookings-detail' booking_id=booking.id %}"
-                                   class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Edit</a>
+                                   class="font-medium text-primary hover:underline">Edit</a>
                             </td>
                         </tr>
                     {% endfor %}
