--- a/templates/core/bookings-detail.html
+++ b/templates/core/bookings-detail.html
@@ -22,7 +22,7 @@
         </div>
         <hr class="my-2">
         <div class="mb-4">
-            <p class="mb-2 font-bold text-md text-primary">Outbound</p>
+            <p class="mb-2 text-xl font-bold text-primary">Outbound</p>
             <div class="flex flex-col w-full p-8 bg-white shadow-lg md:flex-row ">
                 <p class="font-bold">{{ booking.outbound_flight.origin }} to {{ booking.outbound_flight.destination }}</p>
                 <div class="flex text-sm md:ml-auto">
@@ -36,7 +36,7 @@
         </div>
         {% if booking.return_flight %}
             <div class="mb-4">
-                <p class="mb-2 font-bold text-md text-primary">Return</p>
+                <p class="mb-2 text-xl font-bold text-primary">Return</p>
                 <div class="flex flex-col w-full p-8 bg-white shadow-lg md:flex-row ">
                     <p class="font-bold">{{ booking.return_flight.origin }} to {{ booking.return_flight.destination }}</p>
                     <div class="flex text-sm md:ml-auto">
@@ -51,7 +51,7 @@
         {% endif %}
         <div hx-target="this" hx-swap="outerHTML" class="max-w-[400px]">
             <div class="flex items-center justify-between">
-                <p class="text-lg font-bold text-primary">Passengers</p>
+                <p class="text-xl font-bold text-primary">Passengers</p>
                 <button class="rounded-full py-2 px-4 border-[1px] border-primary hover:bg-primary hover:text-white transition-all duration-300"
                         hx-get="/bookings/detail/edit/{{ booking.id }}"
                         aria-label="Edit passengers">Edit Passengers</button>
